tests/snapshots/test_rls_validation__rls_validation_monitor_mode.snap
---
source: tests/test_rls_validation.rs
expression: sql
---
PRAGMA case_sensitive_like = 1
CREATE TABLE IF NOT EXISTS rls_violations (id INTEGER PRIMARY KEY AUTOINCREMENT, table_name TEXT NOT NULL, violation_type TEXT NOT NULL, row_identifier TEXT NOT NULL, policy_name TEXT, detected_at TEXT NOT NULL, severity TEXT NOT NULL, details TEXT, reported_at TEXT) STRICT
CREATE TABLE documents_rls (id BLOB PRIMARY KEY CHECK (length(id) = 16) NOT NULL, owner_id BLOB NOT NULL CHECK (length(owner_id) = 16), title TEXT NOT NULL, content TEXT NOT NULL) STRICT
CREATE VIEW documents AS SELECT id, owner_id, title, content FROM documents_rls WHERE (owner_id = current_app_user())
CREATE TRIGGER documents_insert_trigger INSTEAD OF INSERT ON documents FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE ((NEW.owner_id = current_app_user())) IS NOT TRUE; INSERT INTO documents_rls (id, owner_id, title, content) VALUES (NEW.id, NEW.owner_id, NEW.title, NEW.content); END
CREATE TRIGGER documents_rls_insert_check BEFORE INSERT ON documents_rls FOR EACH ROW WHEN ((NEW.owner_id = current_app_user())) IS NOT TRUE BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy'); END
CREATE TRIGGER documents_rls_update_check BEFORE UPDATE ON documents_rls FOR EACH ROW WHEN ((OLD.owner_id = current_app_user())) IS NOT TRUE OR ((NEW.owner_id = current_app_user())) IS NOT TRUE BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy'); END
CREATE TRIGGER documents_update_trigger INSTEAD OF UPDATE ON documents FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE ((OLD.owner_id = current_app_user())) AND ((NEW.owner_id = current_app_user())) IS NOT TRUE; UPDATE documents_rls SET id = NEW.id, owner_id = NEW.owner_id, title = NEW.title, content = NEW.content WHERE (id = OLD.id) AND ((OLD.owner_id = current_app_user())); END
CREATE TRIGGER documents_delete_trigger INSTEAD OF DELETE ON documents FOR EACH ROW BEGIN DELETE FROM documents_rls WHERE (id = OLD.id) AND ((OLD.owner_id = current_app_user())); END
CREATE TRIGGER documents_rls_rls_monitor_insert AFTER INSERT ON documents_rls FOR EACH ROW BEGIN INSERT INTO rls_violations (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'documents', 'select_not_visible', 'id=' || quote(NEW.id), 'SELECT policy', datetime('now'), 'warning', 'Row inserted into backing table but not readable through the RLS view; PostgreSQL allows this for writes without RETURNING', NULL WHERE NOT (EXISTS (SELECT 1 FROM documents WHERE documents.id = NEW.id)); END
CREATE TRIGGER documents_rls_rls_monitor_update AFTER UPDATE ON documents_rls FOR EACH ROW BEGIN INSERT INTO rls_violations (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'documents', 'select_not_visible', 'id=' || quote(NEW.id), 'SELECT policy', datetime('now'), 'warning', 'Row updated in backing table but not readable through the RLS view; PostgreSQL allows this for writes without RETURNING', NULL WHERE NOT (EXISTS (SELECT 1 FROM documents WHERE documents.id = NEW.id)); END
CREATE VIEW documents_rls_violations AS SELECT id, owner_id, title, content FROM documents_rls WHERE NOT EXISTS (SELECT 1 FROM documents WHERE documents_rls.id = documents.id)
